# Tauri-urcash-app

./: .gitignore  ELECTRON_TO_TAURI_MIGRATION.md  README.md  build-local.sh  build-windows.md  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: build-release.yml
frontend/: .env.example  LICENSE_CACHING_README.md  README.md  UNUSED_LIBRARIES_REMOVED.md  analyze-size.ps1  build-minimal.ps1  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  vite-bundle-analyzer.config.js  vite.config.minimal.ts  vite.config.ts
frontend/public/: sw.js
frontend/src/: App.tsx  config.ts  index.css  main.tsx  routes.tsx
rust-server/: CLOUD_BACKUP_README.md  Cargo.toml  README.md  database.db-shm  database.db-wal
rust-server/src/: main.rs
rust-server/src/database/: mod.rs
rust-server/src/middleware/: auth_middleware.rs  error_middleware.rs  logging_middleware.rs  mod.rs  rate_limit_middleware.rs
rust-server/src/migrations/: mod.rs
rust-server/src/models/: bill.rs  cashbox.rs  cloud_backup.rs  customer.rs  database.rs  debt.rs  delegate.rs  device.rs  employee.rs  expense.rs  installment.rs  inventory.rs  license.rs  mod.rs  money_box.rs  product.rs  purchase.rs  receipt.rs  report.rs  sale.rs  setting.rs  stock.rs  stock_movement.rs  supplier.rs  supplier_payment_receipt.rs  user.rs
rust-server/src/routes/: auth_routes.rs  bills_routes.rs  branch_config_routes.rs  cache_routes.rs  cashbox_routes.rs  cloud_backup_routes.rs  customer_receipts_routes.rs  customer_routes.rs  database_routes.rs  debts_routes.rs  delegates_routes.rs  devices_routes.rs  employees_routes.rs  expenses_routes.rs  installments_routes.rs  license_routes.rs  logs_routes.rs  mobile_live_data_routes.rs  mod.rs  money_boxes_routes.rs  performance_routes.rs  product_routes.rs  purchases_routes.rs  reports_routes.rs  sales_routes.rs  stock_movements_routes.rs  stocks_routes.rs  supplier_payment_receipts_routes.rs  suppliers_routes.rs  user_routes.rs
rust-server/src/services/: auth_service.rs  backup_service.rs  barcode_service.rs  bills_service.rs  branch_config_service.rs  cache_service.rs  cashbox_service.rs  cloud_backup_service.rs  customer_receipts_service.rs  customer_service.rs  database_service.rs  debt_service.rs  delegates_service.rs  device_config_service.rs  device_service.rs  employee_service.rs  expense_service.rs  file_service.rs  installments_service.rs  inventory_service.rs  license_service.rs  log_service.rs  mobile_live_data_service.rs  mod.rs  money_boxes_service.rs  notification_service.rs  performance_service.rs  permissions_service.rs  product_service.rs  purchase_service.rs  report_service.rs  reports_service.rs  sale_service.rs  settings_service.rs  stock_movements_service.rs  stock_service.rs  supplier_payment_receipt_service.rs  supplier_service.rs  user_service.rs  validation_service.rs
rust-server/src/utils/: mod.rs  sku_generator.rs
server/: .env.example  .env.production  .gitignore  LICENSE_PROTECTION_README.md  LICENSE_SCHEDULER_README.md  LOGGING_CONFIG.md  MONEY_BOXES_README.md  apply-stocks-migration.js  build.js  check-debts.js  check-license-monthly.js  check-returns-data.js  clear-all-cache.js  clear-settings-cache.js  config.js  database.js  database_performance_monitor.js  debug-fingerprint.js  debug-license.js  fix-corrupted-database.js  fix-current-corruption.js  fix-sale-items-schema.js  grant-permission.js  index.js  initDb.js  optimize-database.js  package-lock.json  package.json  performance-monitor.js  performance_dashboard.js  send-test-notification.js  start-license-scheduler.js  test-license-scheduler.js  test-notifications.js  update-user-permissions.js
server/controllers/: authController.js  baseController.js  billsController.js  cashBoxController.js  cloudeBackupsController.js  customerReceiptsController.js  customersController.js  databaseController.js  debtsController.js  delegateController.js  (+17 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: license.rtf  license.txt  logo.icns  terms-ar.txt  terms-en.txt
src-tauri/src/: config.rs  main.rs
src-tauri/src/server/: mod.rs
(+395 files in other folders)
