[package]
name = "urcash-app"
version = "0.0.0"
description = "URCash - Point of Sale Application"
authors = ["URCash Team"]
license = ""
repository = ""
default-run = "urcash-app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["macos-private-api", "devtools"] }
tauri-plugin-shell = "2.0"
tokio = { version = "1.0", features = ["full"] }

# Minimal server dependencies
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
